--- a/templates/statefulset.yaml
+++ b/templates/statefulset.yaml
@@ -1,17 +1,17 @@
 apiVersion: apps/v1
 kind: StatefulSet
 metadata:
-  name: {{ include "pharos.testnet.name" $ | lower }}
-  namespace: {{ include "pharos.testnet.namespace" $ | quote }}
+  name: {{ include "pharos.name" $ | lower }}
+  namespace: {{ include "pharos.namespace" $ | quote }}
 spec:
-  serviceName: "{{ include "pharos.testnet.name" $ | lower }}"
+  serviceName: "{{ include "pharos.name" $ | lower }}"
   replicas: 1
   selector:
-    matchLabels: {{- include "pharos.testnet.labels.standard" ( dict "customLabels" .Values.customLabels "context" $ ) | nindent 8 }}
+    matchLabels: {{- include "pharos.labels.standard" ( dict "customLabels" .Values.customLabels "context" $ ) | nindent 8 }}
   template:
     metadata:
       labels: 
-      {{- include "pharos.testnet.labels.standard" ( dict "customLabels" .Values.customLabels "context" $ ) | nindent 8 }}
+      {{- include "pharos.labels.standard" ( dict "customLabels" .Values.customLabels "context" $ ) | nindent 8 }}
     spec:
       containers:
       - name: pharos
