--- a/templates/statefulset.yaml
+++ b/templates/statefulset.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: {{ include "pharos.namespace" $ | quote }}
 spec:
   serviceName: "{{ include "pharos.name" $ | lower }}"
-  replicas: 1
+  replicas: {{- if .Values.snapshot.enabled }} 0 {{- else }} 1 {{- end }}
   selector:
     matchLabels: {{- include "pharos.labels.standard" ( dict "customLabels" .Values.customLabels "context" $ ) | nindent 8 }}
   template:
@@ -13,6 +13,21 @@ spec:
       labels: 
       {{- include "pharos.labels.standard" ( dict "customLabels" .Values.customLabels "context" $ ) | nindent 8 }}
     spec:
+      {{- if .Values.taints }}
+      {{- if .Values.taints.enabled }}
+      tolerations:
+      - key: {{ .Values.taints.key }}
+        operator: {{ .Values.taints.operator | default "Exists" }}
+        {{- if .Values.taints.value }}
+        value: {{ .Values.taints.value }}
+        {{- end }}
+        effect: {{ .Values.taints.effect | default "NoSchedule" }}
+      {{- end }}
+      {{- end }}
+        {{- if .Values.nodeSelector }}
+      nodeSelector:
+        {{- include "pharos.tplvalues.render" ( dict "value" .Values.nodeSelector "context" $ ) | nindent 8 }}
+        {{- end }}
       containers:
       - name: pharos
         image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
@@ -23,7 +38,7 @@ spec:
         - containerPort: 18200
           name: p2p
         - containerPort: 19000
-          name: internal-service
+          name: internal
         volumeMounts:
         - name: pharos-data
           mountPath: /data
