added workdir to snapshot pod and fixed namespace name

--- a/templates/snapshot/snapshot_job.yaml
+++ b/templates/snapshot/snapshot_job.yaml
@@ -16,6 +16,7 @@ spec:
       containers:
       - name: snapshot-helper
         image: ubuntu:latest
+        workingDir: /data
         env:
         - name: SNAPSHOT_URL
           value: "{{ .Values.snapshot.url }}"
