--- a/templates/service.yaml
+++ b/templates/service.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: {{ include "pharos.name" $ | lower }}
-  namespace: {{ include "pharos.namespace" $ | quote }}
+  namespace: "pharos-{{ include "pharos.namespace" $ }}"
 spec:
   type: ClusterIP
   ports:
