added monitoring stack, certificate and gateway definitions

--- a/templates/snapshot/snapshot_job.yaml
+++ b/templates/snapshot/snapshot_job.yaml
@@ -12,6 +12,21 @@ spec:
       labels:
         app: pharos-snapshot
     spec:
+      {{- if .Values.taints }}
+      {{- if .Values.taints.enabled }}
+      tolerations:
+      - key: {{ .Values.taints.key }}
+        operator: {{ .Values.taints.operator | default "Exists" }}
+        {{- if .Values.taints.value }}
+        value: {{ .Values.taints.value }}
+        {{- end }}
+        effect: {{ .Values.taints.effect | default "NoSchedule" }}
+      {{- end }}
+      {{- end }}
+        {{- if .Values.nodeSelector }}
+      nodeSelector:
+        {{- include "pharos.tplvalues.render" ( dict "value" .Values.nodeSelector "context" $ ) | nindent 8 }}
+        {{- end }}
       restartPolicy: Never
       containers:
       - name: snapshot-helper
