--- a/Chart.yaml
+++ b/Chart.yaml
@@ -4,3 +4,7 @@ description: A Helm chart for deploying the Pharos testnet
 type: application
 version: 0.1.0
 appVersion: "1.0"
+home: https://www.lithiumdigital.com 
+maintainers:
+  - name: Lithium Digital
+    email: info@lithiumdigital.com
