--- a/templates/monitoring/grafana/secrets.yaml
+++ b/templates/monitoring/grafana/secrets.yaml
@@ -6,6 +6,6 @@ metadata:
   namespace: {{ include "pharos.namespace" $ | quote }}
 type: Opaque
 stringData:
-  GF_SECURITY_ADMIN_USER: {{ .Values.grafana.adminUser | default "admin" }}
-  GF_SECURITY_ADMIN_PASSWORD: {{ .Values.grafana.adminPassword | default "admin" }}
+  GF_SECURITY_ADMIN_USER: {{ default "admin" .Values.grafana.adminUser | quote }}
+  GF_SECURITY_ADMIN_PASSWORD: {{ default "admin" .Values.grafana.adminPassword | quote }}
 {{ end }}
