--- a/templates/monitoring/prom2teams/deployment.yaml
+++ b/templates/monitoring/prom2teams/deployment.yaml
@@ -20,11 +20,11 @@ spec:
       {{- if .Values.taints.enabled }}
       tolerations:
       - key: {{ .Values.taints.key }}
-        operator: {{ .Values.taints.operator | default "Exists" }}
+        operator: {{ default "Exists" .Values.taints.operator }}
         {{- if .Values.taints.value }}
         value: {{ .Values.taints.value }}
         {{- end }}
-        effect: {{ .Values.taints.effect | default "NoSchedule" }}
+        effect: {{ default "NoSchedule" .Values.taints.effect }}
       {{- end }}
       {{- end }}
         {{- if .Values.nodeSelector }}
@@ -39,11 +39,11 @@ spec:
           - containerPort: {{ .Values.prom2teams.service.port }}
         resources:
           limits:
-            cpu: {{ .Values.prom2teams.resources.limits.cpu | default "500m" }}
-            memory: {{ .Values.prom2teams.resources.limits.memory | default "512Mi" }}
+            cpu: {{ default "500m" .Values.prom2teams.resources.limits.cpu }}
+            memory: {{ default "512Mi" .Values.prom2teams.resources.limits.memory }}
           requests:
-            cpu: {{ .Values.prom2teams.resources.requests.cpu | default "250m" }}
-            memory: {{ .Values.prom2teams.resources.requests.memory | default "256Mi" }}
+            cpu: {{ default "250m" .Values.prom2teams.resources.requests.cpu }}
+            memory: {{ default "256Mi" .Values.prom2teams.resources.requests.memory }}
         volumeMounts:
         - name: templates
           mountPath: {{ .Values.prom2teams.templatePath }}
