--- a/templates/certmanager/certificate.yaml
+++ b/templates/certmanager/certificate.yaml
@@ -2,15 +2,15 @@
 apiVersion: cert-manager.io/v1
 kind: Certificate
 metadata:
-  name: {{ .Values.certmanager.certificate.name | default "domain-cert" }}
+  name: {{ default "mydomaincert" .Values.certmanager.certificate.name }}
   namespace: {{ include "pharos.namespace" $ | quote }}
 spec:
-  secretName: {{ .Values.certmanager.certificate.secretName | default "domain-cert" }}
+  secretName: {{ default "mydomaincert" .Values.certmanager.certificate.secretName }}
   dnsNames:
   {{- range .Values.certmanager.certificate.dnsNames }}
   - {{ . | quote }}
   {{- end }}
   issuerRef:
-    name: {{ .Values.certmanager.clusterIssuer.name | default "letsencrypt" }}
+    name: {{ default "letsencrypt" .Values.certmanager.clusterIssuer.name }}
     kind: ClusterIssuer
-{{ end }}
+{{- end }}
