--- a/templates/certmanager/clusterissuer.yaml
+++ b/templates/certmanager/clusterissuer.yaml
@@ -2,13 +2,13 @@
 apiVersion: cert-manager.io/v1
 kind: ClusterIssuer
 metadata:
-  name: {{ .Values.certmanager.clusterIssuer.name | default "letsencrypt" }}
+  name: {{ default "letsencrypt" .Values.certmanager.clusterIssuer.name }}
 spec:
   acme:
-    email: {{ .Values.certmanager.acme.email | default "you@example.com" }}
-    server: {{ .Values.certmanager.acme.server | default "https://acme-v02.api.letsencrypt.org/directory" }}
+    email: {{ default "you@example.com" .Values.certmanager.acme.email }}
+    server: {{ default "https://acme-v02.api.letsencrypt.org/directory" .Values.certmanager.acme.server }}
     privateKeySecretRef:
-      name: {{ .Values.certmanager.clusterIssuer.secretName | default "letsencrypt" }}
+      name: {{ default "letsencrypt" .Values.certmanager.clusterIssuer.secretName }}
     solvers:
     - http01:
         ingress:
