--- a/templates/monitoring/config-job/config-job.yaml
+++ b/templates/monitoring/config-job/config-job.yaml
@@ -1,5 +1,5 @@
-{{- if .Values.monitoring.enabled }}
-{{- $defaultURL := printf "pushgateway-svc-%s" (include "pharos.name" $) }}
+{{ if .Values.monitoring.enabled }}
+{{ $defaultURL := printf "pushgateway-svc-%s" (include "pharos.name" $) }}
 apiVersion: batch/v1
 kind: Job
 metadata:
@@ -18,11 +18,11 @@ spec:
       {{- if .Values.taints.enabled }}
       tolerations:
       - key: {{ .Values.taints.key }}
-        operator: {{ .Values.taints.operator | default "Exists" }}
+        operator: {{ default "Exists" .Values.taints.operator }}
         {{- if .Values.taints.value }}
         value: {{ .Values.taints.value }}
         {{- end }}
-        effect: {{ .Values.taints.effect | default "NoSchedule" }}
+        effect: {{ default "NoSchedule" .Values.taints.effect }}
       {{- end }}
       {{- end }}
       {{- if .Values.nodeSelector }}
