--- a/templates/monitoring/prometheus/deployment.yaml
+++ b/templates/monitoring/prometheus/deployment.yaml
@@ -20,11 +20,11 @@ spec:
       {{- if .Values.taints.enabled }}
       tolerations:
       - key: {{ .Values.taints.key }}
-        operator: {{ .Values.taints.operator | default "Exists" }}
+        operator: {{ default "Exists" .Values.taints.operator }}
         {{- if .Values.taints.value }}
         value: {{ .Values.taints.value }}
         {{- end }}
-        effect: {{ .Values.taints.effect | default "NoSchedule" }}
+        effect: {{ default "NoSchedule" .Values.taints.effect }}
       {{- end }}
       {{- end }}
         {{- if .Values.nodeSelector }}
@@ -47,11 +47,11 @@ spec:
             - "--storage.tsdb.retention.time={{ .Values.prometheus.retention }}"
           resources:
             limits:
-              cpu: {{ .Values.prometheus.resources.limits.cpu | default "1" }}
-              memory: {{ .Values.prometheus.resources.limits.memory | default "2Gi" }}
+              cpu: {{ default "1" .Values.prometheus.resources.limits.cpu }}
+              memory: {{ default "2Gi" .Values.prometheus.resources.limits.memory }}
             requests:
-              cpu: {{ .Values.prometheus.resources.requests.cpu | default "250m" }}
-              memory: {{ .Values.prometheus.resources.requests.memory | default "512Mi" }}
+              cpu: {{ default "250m" .Values.prometheus.resources.requests.cpu }}
+              memory: {{ default "512Mi" .Values.prometheus.resources.requests.memory }}
           volumeMounts:
             - name: prometheus-config
               mountPath: /etc/prometheus/prometheus.yaml
