--- a/Chart.yaml
+++ b/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v2
-name: pharos-testnet
-description: A Helm chart for deploying the Pharos testnet
+name: pharos-node
+description: A Helm chart for deploying the Pharos node
 type: application
 version: 0.1.0
 appVersion: "1.0"
